# mini-langs

./: .gitignore  README.md  dune-project  mini-langs.opam
lib/: colorText.ml  dataflowAnalysis.ml  dataflowAnalysis.mli  dune  env.ml  genericCFG.ml  miniFunAST.mli  miniFunInterpreter.ml  miniFunInterpreter.mli  miniFunLib.ml  miniImpAST.mli  miniImpCFG.ml  miniImpCFG.mli  miniImpDefinedVariablesAnalysis.ml  miniImpDefinedVariablesAnalysis.mli  miniImpInterpreter.ml  miniImpInterpreter.mli  miniImpLexer.mll  miniImpLib.ml  miniImpParser.mly  miniImpUtils.ml  miniImpUtils.mli  miniRISCCFG.ml  miniRISCCFG.mli  miniRISCInstructionSet.mli  miniRISCInterpreter.ml  miniRISCInterpreter.mli  miniRISCLexer.mll  miniRISCLib.ml  miniRISCLiveRegistersAnalysis.ml  miniRISCLiveRegistersAnalysis.mli  miniRISCParser.mly  miniRISCRegUtils.ml  miniRISCRegUtils.mli  miniRISCRegisterAllocation.ml  miniRISCRegisterAllocation.mli  miniRISCUtils.ml  miniRISCUtils.mli  miniTyFunAST.mli  miniTyFunLexer.mll  (+8 more)
programs/miniImp/compilerTest/: double_loop.mimp  example_0.mimp  example_1.mimp  example_2.mimp  fib.mimp
programs/miniImp/compiler_test/: ackermann_like.mimp  collatz.mimp  constant.mimp  example_3.mimp  example_4.mimp  fact.mimp  liveness_test.mimp  sum_1_to_input.mimp  undef_output.mimp
programs/miniImp/parserTest/: neg_neg.mimp  while_prec.mimp
programs/miniImp/parser_test/: double_if.mimp  else_prec.mimp
programs/miniTyFun/: add.mtfun  and.mtfun  arithm_prec.mtfun  bool_to_int.mtfun  complex_ops.mtfun  compose.mtfun  const_fun.mtfun  double.mtfun  eq.mtfun  equality_compose.mtfun  factorial_letfun.mtfun  fib.mtfun  fun_app_1.mtfun  fun_app_2.mtfun  fun_app_3.mtfun  hof_apply.mtfun  identity.mtfun  if_plus.mtfun  less.mtfun  let_const_fun.mtfun  let_in_app.mtfun  let_shadow.mtfun  mul.mtfun  multi_arg_sim.mtfun  nested_app.mtfun  nested_if.mtfun  nested_letfun.mtfun  not.mtfun  or.mtfun  paren_prec.mtfun  pow2.mtfun  sub.mtfun  tricky_prec.mtfun  zero_test.mtfun
test/: dune  testUtils.ml  test_miniFunInterpreter.ml  test_miniImpInterpreter.ml  test_miniTyFunInterpreter.ml  test_miniTyFunLib.ml
